[package]
name = "cvt-vesting"
version = "1.0.0"
description = "Chronos Vault Token Vesting Program - Mathematically Provable Time-Locks"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cvt_vesting"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"

[dev-dependencies]
anchor-client = "0.29.0"
solana-program-test = "1.17"
